@@ -1,3 +1,9 @@
+2016-02-13  kitone  <kitone@gna.org>
+
+	* plugins/actions/preferences/dialog-preferences.ui:
+	* plugins/actions/preferences/interfacepage.h:
+	Fix bug #24407 : Undo/redo should be unlimited/have configurable limit/ higher limit
+
 2016-02-07  kitone  <kitone@gna.org>
 
 	* plugins/actions/preferences/dialog-preferences.ui:
